NULL =
pkgdatadir = $(datadir)/tecnoballz/hires
dist_pkgdata_DATA = \
  all_sprites.png \
  bricks.png \
  font_score.png \
  game_fonts.png \
  gigablitz.png \
  head_animation.png \
  menu_fonts.png \
  paddles_1.png \
  paddles_2.png \
  right_panel.png \
  shop.png \
  small_fonts.png \
  tilesmap.png \
  $(NULL)
