NULL =
pkgdatadir = $(datadir)/tecnoballz/sounds
dist_pkgdata_DATA = \
  ralarm.wav \
  rappar.wav \
  raspire.wav \
  ratom.wav \
  rbricote.wav \
  rbrique1.wav \
  rbrique2.wav \
  rbrique3.wav \
  rbrique4.wav \
  rbrique5.wav \
  rdetruit_indes.wav \
  reject.wav \
  rexeplo_atom.wav \
  rexplo_big.wav \
  rexplo_rak.wav \
  rgadget_sound.wav \
  rindes_1.wav \
  rindes_2.wav \
  rlife_moins.wav \
  rlife_plus.wav \
  rmoney.wav \
  rmontre_touche.wav \
  rraquette.wav \
  rtecno.wav \
  rtir_monstre.wav \
  rtir_rak.wav \
  rtransfo.wav \
  $(NULL)
