NULL =

SUBDIRS = lores hires textures sounds musics texts

pkgdatadir = $(datadir)/tecnoballz
dist_pkgdata_DATA = \
  cosinus128.list \
  gard_lissa.list \
  levels-data.xml \
  min60map.png \
  tableau.data \
  tilemap-congratulation_20.data \
  tilemap-congratulation_40.data \
  tilemap-guardians_20.data \
  tilemap-guardians_40.data \
  tilemap-menu_20.data \
  tilemap-menu_40.data \
  $(NULL)

