NULL =
pkgdatadir = $(datadir)/tecnoballz/texts
dist_pkgdata_DATA = \
  main_menu_en.txt \
  main_menu_fr.txt \
  popup_menu_en.txt \
  popup_menu_fr.txt \
  scrolltext_en.txt \
  scrolltext_fr.txt \
  shop_en.txt \
  shop_fr.txt \
  short_info_messages_en.txt \
  short_info_messages_fr.txt \
  $(NULL)
