NULL =
pkgdatadir = $(datadir)/tecnoballz/musics
dist_pkgdata_DATA = \
  area1-game.mod \
  area1-game2.mod \
  area2-game.mod \
  area3-game.mod \
  area4-game.mod \
  area5-game.mod \
  gardien-go.mod \
  high-score.mod \
  over-theme.mod \
  tecno-winn.mod \
  tecnoballz.mod \
  mon-lapin_reg-zbb.mod \
  termigator_reg-zbb.mod \
  in-game-music-1_reg.mod \
  fridge-in-space_from_reg-zbb.mod \
  $(NULL)
