NULL =
pkgdatadir = $(datadir)/tecnoballz/textures
dist_pkgdata_DATA = \
	map01.png \
	map02.png \
	map03.png \
	map04.png \
	map05.png \
	map06.png \
	map07.png \
	map08.png \
	map09.png \
	map10.png \
	map11.png \
	map12.png \
	map13.png \
	map14.png \
	map15.png \
	map16.png \
	map17.png \
	map18.png \
	map19.png \
	map20.png \
	map21.png \
	map22.png \
	map23.png \
	map24.png \
	map25.png \
	map26.png \
	map27.png \
	map28.png \
	map29.png \
	map30.png \
	map31.png \
	map32.png \
	map33.png \
	map34.png \
	map35.png \
	map36.png \
	map37.png \
	map38.png \
	map39.png \
	map40.png \
	map41.png \
	map42.png \
	map43.png \
	map44.png \
	map45.png \
	map46.png \
	map47.png \
	map48.png \
	map49.png \
	map50.png \
	map51.png \
	map52.png \
	map53.png \
	map54.png \
	map55.png \
	map56.png \
	map57.png \
	map58.png \
	map59.png \
	map60.png \
	map61.png \
	map62.png \
	map63.png \
	map64.png \
	map65.png \
	map66.png \
	map67.png \
	map68.png \
	map69.png \
	map70.png \
	map71.png \
	map72.png \
	map73.png \
	map74.png \
	map75.png \
	map76.png \
	map77.png \
	map78.png \
	$(NULL)
